[gd_scene load_steps=2 format=2]

[ext_resource path="res://enemies/AI/WallDetector.gd" type="Script" id=1]

[node name="WallDetector" type="Node2D"]
script = ExtResource( 1 )

[node name="RightDetector" type="RayCast2D" parent="."]
editor/display_folded = true
enabled = true
cast_to = Vector2( 2, 0 )

[node name="Line2D" type="Line2D" parent="RightDetector"]
points = PoolVector2Array( 0, 0, 2, 0 )
width = 2.0
default_color = Color( 0.4, 1, 0.619608, 1 )
texture_mode = -1035468800

[node name="LeftDetector" type="RayCast2D" parent="."]
editor/display_folded = true
enabled = true
cast_to = Vector2( -2, 0 )

[node name="Line2D" type="Line2D" parent="LeftDetector"]
points = PoolVector2Array( 0, 0, -2, 0 )
width = 2.0
default_color = Color( 0.4, 1, 0.619608, 1 )
texture_mode = -1035468800

[node name="DownDetector" type="RayCast2D" parent="."]
editor/display_folded = true
enabled = true
cast_to = Vector2( 0, 2 )

[node name="Line2D" type="Line2D" parent="DownDetector"]
points = PoolVector2Array( 0, 0, 0, 2 )
width = 2.0
default_color = Color( 0.4, 1, 0.619608, 1 )
texture_mode = -1035468800

[node name="UpDetector" type="RayCast2D" parent="."]
editor/display_folded = true
enabled = true
cast_to = Vector2( 0, -2 )

[node name="Line2D" type="Line2D" parent="UpDetector"]
points = PoolVector2Array( 0, 0, 0, -2 )
width = 2.0
default_color = Color( 0.4, 1, 0.619608, 1 )
texture_mode = -1035468800
